syntax = "proto3";
package currency;

import "google/rpc/status.proto";

option go_package = "/currency";

service Currency {
  rpc GetRate(RateRequest) returns (RateResponse);
  rpc SubscribeRates(stream RateRequest) returns (stream StreamingRateResponse);
}

message RateRequest {
  Currencies Base = 1;
  Currencies Destination = 2;
}

message RateResponse {
  double Rate = 1;
  Currencies Base = 2;
  Currencies Destination = 3;
}


message StreamingRateResponse {
  oneof message {
    RateResponse rate_response = 1;
    google.rpc.Status error = 2;
  }
}

// Currencies is an enum which represents the allowed currencies for the API
enum Currencies {
  EUR=0;
  USD=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
}
